--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "twilio": "^5.0.1",
     "validator": "^13.11.0",
     "xlsx": "^0.18.5"
   }
